# pico-vl53l5cx

./: .gitignore  CMakeLists.txt  README.md  test.c
api/: CMakeLists.txt  platform.c  platform.h  vl53l5cx_api.c  vl53l5cx_api.cpp
examples/ex11_motion_indicator_with_detection_thresholds/: ex11_motion_indicator_with_detection_thresholds.c
